iml-agent/src/snapshots/iml_agent__network_interfaces__tests__parse_lnetctl_net_show_output.snap
---
source: iml-agent/src/network_interfaces.rs
expression: yaml
---
{
  "net": [
    {
      "net type": "lo",
      "local NI(s)": [
        {
          "nid": "0@lo",
          "status": "up",
          "interfaces": null
        }
      ]
    },
    {
      "net type": "o2ib",
      "local NI(s)": [
        {
          "nid": "172.16.0.24@o2ib",
          "status": "down",
          "interfaces": [
            "ib0",
            "ib3"
          ]
        },
        {
          "nid": "172.16.0.28@o2ib",
          "status": "up",
          "interfaces": [
            "ib1",
            "ib4",
            "ib5"
          ]
        }
      ]
    },
    {
      "net type": "tcp",
      "local NI(s)": [
        {
          "nid": "10.73.20.21@tcp",
          "status": "up",
          "interfaces": [
            "eth1",
            "eth2"
          ]
        }
      ]
    }
  ],
  "state": "Up"
}
